--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,83 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 * {
-  box-sizing: border-box;
+  font-family: var(--font-Cairo);
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
+  font-family: var(--font-Cairo);
 }
-
+:root {
+  --main-transition: 0.5s;
+  --main-color: #3640ce;
+  --second-color: #2c3583;
+  --third-color: #65bcfb;
+  --fourth-color: #dfecff;
+  --fifth-color: #f6f6f6;
+  --section-head-color: #1a1e4c;
+  --text-color: #808080;
+}
 a {
-  color: inherit;
   text-decoration: none;
 }
+li {
+  list-style: none;
+}
+html {
+  scroll-behavior: smooth;
+}
+body {
+  height: 100%;
+  /* background: #f6f6f6; */
+}
+.container {
+  width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
   }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
+input,
+button {
+  border: none;
+  outline: none;
+  border: 1px solid var(--text-color);
+  background: none;
+  border-radius: 0.3rem;
+}
+.formTitle {
+  text-align: center;
+  text-transform: capitalize;
+  margin-bottom: 2rem;
+  letter-spacing: 3px;
+  color: var(--main-color);
 }
