--- a/src/app/articles/articles.css
+++ b/src/app/articles/articles.css
@@ -26,38 +26,33 @@ div {
   }
 
   .content {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(550px, 1fr));
-    gap: 1.5rem;
-    padding: 2rem;
-    justify-items: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 25px;
+    margin-top: 2.1875rem;
   }
 
-
   .cardContent {
+    flex-basis: calc(50% - 25px);
     position: relative;
     background-color: #f9f9f9;
     border: 1px solid #ddd;
-    padding: 1.25rem 1.875rem;
+    padding: 1.875rem;
     border-radius: 0.625rem;
-    width: 100%;
-    max-width: 400px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
     text-align: center;
     transition: all 0.3s ease-in-out;
     display: flex;
     .cardTitle {
-      position: absolute;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      width: 50%;
       margin-left: 20px;
       p {
         font-size: 14px;
         font-weight: bold;
         margin: 0;
-        flex: 1;
         text-align: left;
         line-height: 15px;
       }
@@ -68,35 +63,29 @@ div {
         margin-left: auto !important;
         transition: color 0.3s ease;
         right: 0;
-        margin-right: 0.625rem;
-        margin-top: 8px;
-      }
-    }
-    .publishedDate {
-      display: flex;
-      justify-content: space-between;
-      position: absolute;
-      margin-top: 30px;
-      width: 50%;
-      text-align: left;
-      margin-left: 1.25rem;
-      a {
-        display: block;
-        background-color: var(--main-color);
-        margin-top: 25px;
-        margin-right: 5px;
-        text-decoration: none;
-        color: white;
-        padding: 5px 10px;
-        border-radius: 8px;
-        -webkit-border-radius: 8px;
-        -moz-border-radius: 8px;
-        -ms-border-radius: 8px;
-        -o-border-radius: 8px;
+        margin: 0.5rem 0.9375rem 0 0;
       }
     }
   }
-
+  .publishedDate {
+    position: absolute;
+    width: calc(100% - 12.5rem) !important;
+    display: flex;
+    justify-content: space-between;
+    margin: 1.25rem 0 0 1.25rem;
+    padding-right: 0.625rem;
+    a {
+      display: block;
+      background-color: var(--main-color);
+      color: white;
+      padding: 10px 20px;
+      border-radius: 0.75rem;
+      -webkit-border-radius: 0.75rem;
+      -moz-border-radius: 0.75rem;
+      -ms-border-radius: 0.75rem;
+      -o-border-radius: 0.75rem;
+    }
+  }
 }
 .loading {
   margin: 1.25rem;
@@ -108,32 +97,24 @@ div {
   .buttons {
     margin: 1.25rem 0.9375rem;
   }
-  .content {
-    .vaccine-card {
-      max-width: 360px;
-      position: relative;
-      right: 50%;
-      transform: translateX(50%);
-      -webkit-transform: translateX(50%);
-      -moz-transform: translateX(50%);
-      -ms-transform: translateX(50%);
-      -o-transform: translateX(50%);
-      .cardTitle {
-        svg {
-          margin: 30px 25px 0 0 !important;
-        }
-      }
-    }
-    .publishedDate {
-      a {
-        padding: 5px !important;
-        position: absolute;
-        right: 10%;
-      }
-    }
-  }
+
   .notFound {
     position: relative;
     right: 20%;
+  }
+  .publishedDate {
+    flex-direction: column;
+    margin: 0 0 0 0.625rem !important;
+    a {
+      padding: 5px !important;
+    }
+  }
+}
+@media (max-width: 1023px) {
+  .content {
+    display: flex;
+    .cardContent {
+      flex-basis: 100%;
+    }
   }
 }
