--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,42 +1,53 @@
+
 .footer {
-  background-color: var(--fourth-color);
+  background-color: var(--fifth-color);
+  padding: 2.5rem 0;
+  .container {
+    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    
+    > div {
+      ul {
+        margin-top: 0.625rem;
+        display: flex;
+        flex-direction: column;
+        gap: 0.9375rem;
+        li {
+          a {
+            color: var(--text-color);
+            &:hover {
+              color: var(--second-color);
+            }
+          }
+        }
+      }
+      .socials {
+        margin-top: 1.375rem;
+      }
+    }
+    .footerImage {
+      width: 12.5rem;
+      height: 5rem;
+      margin-top: -25px;
+    }
+    .imageContainer {
+      img {
+        width: 2.5rem;
+        height: 2.5rem;
+      }
+    }
+  }
 }
-.footer .container {
-  padding: 3rem 0;
+@media (max-width: 1030px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr) !important;
+    row-gap: 20px;
+  }
 }
-.footer img {
-  width: 250px;
-  height: 80px;
-}
-.footer h3 {
-  color: var(--second-color);
-  font-size: 30px;
-  font-weight: 600;
-}
-.footer .uls li {
-  padding: 10px 0;
-}
-.footer .uls li a {
-  color: #6d6d6d;
-  font-size: 22px;
-  font-weight: 500;
-}
-.sociaolMedia ul {
-  display: flex;
-  gap: 12px;
-  margin-top: 3.125rem;
-}
-.sociaolMedia ul li a{
-  font-size: 1.875rem;
-  border: 1px solid #808080;
-  padding: 5px;
-  border-radius: 8px;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  -ms-border-radius: 8px;
-  -o-border-radius: 8px;
-  /* color: white; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@media (max-width: 768px) {
+  .container {
+    text-align: left !important;
+    grid-template-columns: repeat(1, 1fr) !important;
+  }
 }
