--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,6 +1,7 @@
 
 .footer {
   background-color: var(--fifth-color);
+  margin-top: 1.25rem;
   padding: 2.5rem 0;
   .container {
     text-align: center;
