--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,7 +1,8 @@
 
 .footer {
   background-color: var(--fifth-color);
-  margin-top: 1.25rem;
+  padding-top: 2.5rem;
+  margin-top: 2.5rem;
   padding: 2.5rem 0;
   .container {
     text-align: center;
