--- a/src/Components/profile/children/children.css
+++ b/src/Components/profile/children/children.css
@@ -1,3 +1,12 @@
+.contentInformation {
+  background-color: var(--fifth-color);
+  padding-bottom: .625rem;
+  border-radius: .75rem;
+  -webkit-border-radius: .75rem;
+  -moz-border-radius: .75rem;
+  -ms-border-radius: .75rem;
+  -o-border-radius: .75rem;
+}
 .children {
   h3 {
     text-align: center;
@@ -24,7 +33,7 @@
       justify-content: space-between;
       width: 100%;
       margin-top: 1.375rem;
-      background-color: var(--fifth-color);
+
       border-radius: 1.375rem;
       -webkit-border-radius: 1.375rem;
       -moz-border-radius: 1.375rem;
@@ -37,7 +46,7 @@
       .infoAndImage {
         display: flex;
         .info {
-          padding: 1.25rem 0 0 1.25rem;
+          padding: 10px 0 0 30px;
         }
       }
       .icons {
@@ -59,6 +68,29 @@
       }
     }
   }
+}
+.buttons {
+  padding: 0 1.875rem;
+  display: flex;
+  justify-content: space-between;
+  a {
+    border: 1px solid var(--main-color);
+    width: 7.5rem;
+    height: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: .9375rem;
+    -webkit-border-radius: .9375rem;
+    -moz-border-radius: .9375rem;
+    -ms-border-radius: .9375rem;
+    -o-border-radius: .9375rem;
+    color: var(--main-color);
+    &.active {
+      background-color: var(--main-color);
+      color: white;
+    }
+}
 }
 @media (max-width: 600px) {
   .divContent {
