--- a/src/app/profile/[childId]/editForm/[id]/editForm.css
+++ b/src/app/profile/[childId]/editForm/[id]/editForm.css
@@ -1,5 +1,5 @@
 .form {
-  width: 100%; 
+  width: 100%;
   padding: 1.875rem 0;
   div {
     h3 {
@@ -21,15 +21,17 @@
   }
   form {
     .content {
+      position: relative;
       display: flex;
-      justify-content: center;
+      justify-content: space-around;
       margin-top: 1.5625rem;
-      gap: .625rem;
-      input {
+      gap: 0.625rem;
+      input,
+      select {
+        width: 300px;
         padding: 10px 30px;
       }
     }
-
   }
   .buttons {
     display: flex;
@@ -37,7 +39,7 @@
     gap: 1.875rem;
     margin-top: 1.5625rem;
     button,
-    input[type="submit"] {
+    input[type='submit'] {
       border: none;
       outline: none;
       padding: 10px 30px;
@@ -53,7 +55,7 @@
     a {
       text-decoration: none;
     }
-    input[type="submit"] {
+    input[type='submit'] {
       background-color: var(--main-color);
       color: white;
       width: fit-content !important;
@@ -70,9 +72,30 @@
     }
   }
 }
-@media (max-width: 1200px) {
+@media (max-width: 768px) {
+  .form {
+    img {
+      width: 200px !important;
+      height: 150px !important;
+    }
+  }
+  form {
+    margin-top: 1.5625rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
   .content {
-    input {
+    gap: 10px !important;
+    margin: 0 !important;
+    justify-content: center;
+    flex-direction: column;
+    label {
+      margin-top: .9375rem;
+    }
+    input,
+    select {
+      margin: 1.25rem 0;
       width: 100% !important;
     }
   }
