--- a/src/app/articlesSection/articlesSection.css
+++ b/src/app/articlesSection/articlesSection.css
@@ -1,43 +1,41 @@
-.articles-section {
-  padding: 2.5rem 0;
+.articlesSection {
   background-color: #f0f4ff;
+}
 
-  .articles-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 1.5rem;
-    max-width: 1200px;
-    margin: 3rem auto;
+.articles-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 1.5rem;
+  padding: 3rem 0;
+}
 
-    .article-card {
-      border: 1px solid #ccc;
-      border-radius: 0.75rem;
-      text-align: center;
-      transition: box-shadow 0.3s;
-      overflow: hidden;
+.article-card {
+  border: 1px solid #ccc;
+  border-radius: 0.75rem;
+  text-align: center;
+  transition: box-shadow 0.3s;
+  overflow: hidden;
+}
 
-      &:hover {
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-      }
+.article-card:hover {
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+}
 
-      .image-wrapper {
-        position: relative;
-        height: 160px;
-        width: 100%;
+.article-card .image-wrapper {
+  position: relative;
+  height: 160px;
+  width: 100%;
+}
 
-        img {
-          object-fit: cover;
-          max-width: 100%;
-          max-height: 100%;
-        }
-      }
+.article-card .image-wrapper img {
+  object-fit: cover;
+  max-width: 100%;
+  max-height: 100%;
+}
 
-      p {
-        font-size: 0.875rem;
-        font-weight: 500;
-        padding: 1rem 0;
-        color: var(--main-color);
-      }
-    }
-  }
+.article-card p {
+  font-size: 0.875rem;
+  font-weight: 500;
+  padding: 1rem 0;
+  color: var(--main-color);
 }
