Add The Vaccines and medicines page in admin dashboard

--- a/src/Components/AdminDashboard/doctors/doctors.css
+++ b/src/Components/AdminDashboard/doctors/doctors.css
@@ -1,4 +1,7 @@
-.doctorsAdmin {
+.doctorsAdmin,
+.articlesDashboard,
+.medicineDashboard,
+.vaccines {
   .container {
     display: flex;
     flex-direction: column;
