--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@
   --fourth-color: #dfecff;
   --fifth-color: #f6f6f6;
   --section-head-color: #1a1e4c;
-  --second-background:#e1eeff:
+  --second-background: #e1eeff;
   --text-color: #808080;
 }
 a {
@@ -84,11 +84,40 @@ input {
   letter-spacing: 3px;
   color: var(--main-color);
 }
-.textUnderLine {
+/* .textUnderLine {
   color: var(--main-color);
   text-transform: capitalize;
   text-decoration: underline wavy;
   font-style: italic;
+} */
+.wavy-text {
+  position: relative;
+  font-style: italic;
+  color: var(--main-color);
+  display: inline-block;
+  text-transform: capitalize;
+}
+
+.wavy-text::after {
+  content: '';
+  position: absolute;
+  bottom: -4px;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background: url('data:image/svg+xml;utf8,<svg width="100%" height="10" xmlns="http://www.w3.org/2000/svg"><path d="M0 5 Q2.5 0 5 5 T10 5 T15 5 T20 5 T25 5 T30 5" stroke="%233f3fee" fill="transparent" stroke-width="1.5"/></svg>')
+    repeat-x;
+  background-size: 30px 10px;
+  animation: wave 1s linear infinite;
+}
+
+@keyframes wave {
+  0% {
+    background-position-x: 0;
+  }
+  100% {
+    background-position-x: 30px;
+  }
 }
 .pageHeader {
   position: relative;
@@ -109,6 +138,7 @@ input {
 }
 
 .landing,
-.journey,.articlesSection {
+.journey,
+.articlesSection {
   padding: 2rem 0;
 }
