Modified in global css file

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@
   --fourth-color: #dfecff;
   --fifth-color: #f6f6f6;
   --section-head-color: #1a1e4c;
-  --second-background:#e1eeff:
+  --second-background:#e1eeff;
   --text-color: #808080;
 }
 a {
