--- a/src/Components/profile/addChild/addChild.css
+++ b/src/Components/profile/addChild/addChild.css
@@ -38,6 +38,9 @@
 }
 #addBtn {
   width: 100% !important;
+  display: flex;
+  justify-content: center;
+  margin-right: 1.875rem;
 } 
 
 /* .addChildContent {
